--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://monikaosiak.github.io/react-wheelmap"
+  "homepage": "https://monika-osiak.github.io/react-wheelmap"
 }
